// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Activity> renders 1`] = `
<ActivityIndicator
  animating={true}
  color="#e0e0e0"
  hidesWhenStopped={true}
  size="small"
  style={
    Array [
      undefined,
      false,
    ]
  }
/>
`;

exports[`<Activity> when {color} 1`] = `
<ActivityIndicator
  animating={true}
  color="#f00"
  hidesWhenStopped={true}
  size="small"
  style={
    Array [
      undefined,
      false,
    ]
  }
/>
`;

exports[`<Activity> when {size} 1`] = `
<ActivityIndicator
  animating={true}
  color="#e0e0e0"
  hidesWhenStopped={true}
  size="large"
  style={
    Array [
      undefined,
      false,
    ]
  }
/>
`;
